Make the website reflect the newest repo state!

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,6 +22,10 @@ jobs:
           submodules: 'recursive'
           fetch-depth: 0
       
+      - name: Update the cook-book data to latest
+        run: |
+          git submodule update --remote
+      
       - uses: actions/setup-python@v2
         with:
           python-version: 3.9.6
