--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,11 +33,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyyaml
+          pip install pyyaml requests Pillow
       
       - name: Parse recipes
         run: |
           python parse_content.py -i content_raw -o content/recipes
+      
+      - name: Generate thumbnails
+        run: |
+          python generate_thumbnails.py -i content/recipes -o content/recipes -serif fonts/PlayfairDisplay-Regular.ttf -sansserif fonts/Lato-Regular.ttf
       
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
