--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -50,7 +50,7 @@ jobs:
           extended: true
           
       - name: Build
-        run: hugo
+        run: hugo --baseURL https://cookbook.betterinformatics.com
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
