--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,6 +14,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    
+    # Don't run this action on forks
+    if: github.repository_owner == 'compsoc-edinburgh'
 
     steps:
       - uses: actions/checkout@v2
